<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movimiento_tipo"
        android:textColor="@color/text_secondary"
        android:textSize="13sp" />

    <RadioGroup
        android:id="@+id/grupo_tipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_apertura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movimiento_apertura" />

        <RadioButton
            android:id="@+id/radio_entrada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/movimiento_entrada" />

        <RadioButton
            android:id="@+id/radio_retirada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/movimiento_retirada" />
    </RadioGroup>

    <EditText
        android:id="@+id/input_importe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:hint="@string/movimiento_importe_hint"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/input_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/movimiento_descripcion_hint"
        android:inputType="textCapSentences" />
</LinearLayout>
